# TestKnowledgebaseDev

./: .gitignore  KI² Data Plane — API Reference-20260312102733.md
data-plane/: .env.example  .gitignore  API-REFERENCE.md  Dockerfile  README.md  nixpacks.toml  pyproject.toml
data-plane/app/: config.py  main.py
data-plane/app/dependencies/: api_key.py
data-plane/app/middleware/: hmac_auth.py  request_id.py
data-plane/app/models/: __init__.py  classify.py  collections.py  common.py  health.py  search.py
data-plane/app/models/local/: discover.py  ingest.py  parse.py  vectors.py
data-plane/app/models/online/: ingest.py  ingest_at.py  parse.py  scrape.py  vectors.py
data-plane/app/routers/: _ingest_utils.py  _parse_utils.py
data-plane/app/routers/local/: discover.py  ingest.py  parse.py  vectors.py
data-plane/app/routers/online/: collections.py  ingest.py  ingest_at.py  ingest_stream.py  parse.py  scrape.py  vectors.py  vectors_at.py
data-plane/app/routers/shared/: classify.py  collections.py  health.py  metrics.py  search.py
data-plane/app/services/: audit.py  cache.py  metrics.py  rate_limiter.py
data-plane/app/utils/: content.py  hmac.py  logger.py
data-plane/scripts/: check_online_ingest_fallback.py  probe_bge_gemma2.py  test_litellm.py
data-plane/tests/: conftest.py  test_classify.py  test_collections.py  test_discover.py  test_health.py  test_hmac_auth.py  test_ingest.py  test_ingest_at.py  test_ingest_online_fallback.py  test_ingest_stream.py  test_parse.py  test_scrape.py  test_search.py  test_speedup.py  test_vectors.py  test_vectors_at.py
(+33 files in other folders)
